# PortMux

./: .gitignore  README.md  client  client.cpp  config.yaml  interceptor  interceptor.cpp  script.py  server  server.cpp  v1interceptor.cpp
examples/: functions.cpp  headers.h  interceptor.cpp  interceptor_v2.cpp  twowayinter.cpp
examples/http_repeater/: forwarder  functions.cpp  headers.hpp  interceptor.cpp  makefile.mk  repeater
examples/httpserver/: index.html
examples/two-way_v2/: interceptor.cpp  server1.cpp  server2.cpp
port-rust/: Cargo.toml  Makefile  config.yaml  portmux.service
port-rust/src/: connection.rs  header_check.rs  main.rs  main_bf.rs  protocol.rs  sni_stuff.rs  test.rs  utils.rs
port-rust/src/protocol/: custom_script.rs  mod.rs  parser.rs  sni.rs  types.rs
src/: connection.rs
src/protocol/: custom_script.rs
