[package]
name = "port-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tls-parser = "0.11"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "header_check"
path = "src/header_check.rs"

[[bin]]
name="sni_stuff"
path="src/sni_stuff.rs"