[package]
name = "port-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.25", features = ["auto-initialize"] }
serde_yml = "0.0.12"
regex = "1.3.9"

[[bin]]
name = "portmux"
path = "src/main.rs"
